@@ -2,18 +2,18 @@ package ru.project.buySellStore.service.impl;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import ru.project.buySellStore.exception.productEx.*;
 import ru.project.buySellStore.exception.productEx.ProductArchiveException;
 import ru.project.buySellStore.exception.productEx.ProductNotFoundException;
 import ru.project.buySellStore.exception.productEx.ProductRestoreException;
 import ru.project.buySellStore.model.Product;
+import ru.project.buySellStore.model.User;
 import ru.project.buySellStore.repository.ProductRepository;
 import ru.project.buySellStore.service.ProductService;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Сервис для управления сущностью товара
+ * Сервис для управления товаром
  */
 @Service
 public class ProductServiceImpl implements ProductService {
@@ -29,21 +29,40 @@ public class ProductServiceImpl implements ProductService {
         this.productRepository = productRepository;
     }
 
+    /**
+     * Получить товар по id
+     * <p>
+     * Нужен для внутренней работы приложения
+     * @throws ProductNotFoundException если товара с указанным id не существует
+     */
+    private Product findById(Long id) throws ProductNotFoundException {
+        return productRepository.findById(id)
+                .orElseThrow(() -> new ProductNotFoundException(id));
+    }
+
     @Override
     public Product save(Product product) {
         return productRepository.save(product);
     }
 
     @Override
-    public List<Product> findAll() {
+    public List<Product> findAll(User user) {
         return productRepository.findAll().stream()
-                .filter(product -> !product.isArchived()).collect(Collectors.toList());
+                .filter(p -> !p.isArchived())
+                .filter(p -> hasAccess(p, user))
+                .toList();
     }
 
     @Override
-    public Product findById(Long id) throws ProductNotFoundException {
-        return productRepository.findById(id)
+    public Product findById(Long id, User user) throws ProductNotFoundException {
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ProductNotFoundException(id));
+
+        if (!hasAccess(product, user) || product.isArchived()) {
+            throw new ProductNotFoundException(id);
+        }
+
+        return product;
     }
 
     @Override
@@ -78,5 +97,45 @@ public class ProductServiceImpl implements ProductService {
 
         product.setArchived(false);
         productRepository.save(product);
+    }
+
+    @Override
+    public void assignSeller(Product product, User seller) {
+        product.setSeller(seller);
+        productRepository.save(product);
+    }
+
+    @Override
+    public void buyProduct(Long productId, User buyer) throws ProductArchiveException,
+            ProductWithoutSellerException, ProductAlreadyBoughtException,
+            ProductNotFoundException {
+        Product product = findById(productId);
+
+        if (product.isArchived()) {
+            throw new ProductArchiveException(productId);
+        }
+
+        if (product.getSeller() == null) {
+            throw new ProductWithoutSellerException(productId);
+        }
+
+        if (product.getBuyer() != null) {
+            throw new ProductAlreadyBoughtException(productId);
+        }
+
+        product.setBuyer(buyer);
+
+        productRepository.save(product);
+    }
+
+    /**
+     * Проверка доступа к продукту для конкретного пользователя
+     */
+    private boolean hasAccess(Product product, User user) {
+        return switch (user.getRole()) {
+            case SUPPLIER -> product.getSupplier() != null && user.equals(product.getSupplier());
+            case SELLER   -> product.getSeller() != null && user.equals(product.getSeller());
+            case BUYER    -> product.getBuyer() != null && user.equals(product.getBuyer());
+        };
     }
 }
